--- a/web/angular-wallet/src/app/main/dashboard/widgets/token/token.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/token/token.component.html
@@ -29,6 +29,7 @@
     <ng-container *ngIf="!isLoading">
       <div class="pr-8 chart">
         <canvas baseChart
+                id="power-user-tokens-chart"
                 height="108"
                 width="108"
                 [datasets]="datasets"
