--- a/web/angular-wallet/src/app/main/dashboard/widgets/token/token.component.scss
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/token/token.component.scss
@@ -14,6 +14,11 @@
     width: 120px;
   }
 
+  #power-user-tokens-chart{
+    position: relative;
+    z-index: 9;
+  }
+
   .tokenCount {
     position: absolute;
     font-size: 18px;
