wip: working on fee system

--- a/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
@@ -30,7 +30,8 @@
     </mat-form-field>
   </div>
 
-  <app-fee-selector *ngIf="!immutable" [fees]="fees" [(fee)]="fee"></app-fee-selector>
+  <app-fee-input *ngIf="!immutable" [type]="type" [subtype]="subtype" [(feeSigna)]="fee"></app-fee-input>
+<!--  <app-fee-selector *ngIf="!immutable" [fees]="fees" [(fee)]="fee"></app-fee-selector>-->
 
   <mat-checkbox labelPosition="before" [disabled]="immutable" [(ngModel)]="showMessage"
                 name="showMessage">{{ "add_message_q" | i18n }}</mat-checkbox>
