--- a/web/angular-wallet/src/app/components/recipient-input/recipient-input.component.html
+++ b/web/angular-wallet/src/app/components/recipient-input/recipient-input.component.html
@@ -23,7 +23,7 @@
       </mat-icon>
     </div>
     <ng-container *ngIf="withQrCode">
-      <input #file type="file" accept="image/*" (change)="parseQR()" id="{{fileId}}" class="inputfile" capture="camera">
+      <input #file type="file" accept="image/*" (change)="parseQR()" id="{{fileId}}" class="inputfile" capture="environment">
       <label for="{{fileId}}" class="camera-icon" *ngIf="!disabled">
         <mat-icon>camera_alt</mat-icon>
       </label>
