--- a/web/angular-wallet/src/app/components/message-input/message-input.component.scss
+++ b/web/angular-wallet/src/app/components/message-input/message-input.component.scss
@@ -19,7 +19,7 @@
       margin-left: 0.25rem;
       font-size: 12px;
       border-radius: 4px;
-      padding: 0 4px;
+      padding: 0 8px 0 2px;
       cursor: pointer;
     }
 
