--- a/web/angular-wallet/src/app/main/messages/message-view/message-view.component.html
+++ b/web/angular-wallet/src/app/main/messages/message-view/message-view.component.html
@@ -40,13 +40,13 @@
                     fuseMatSidenavToggler="message-right-sidenav"
                     matTooltip="{{encrypt ? 'Messages will be encrypted' : 'Messages will be plain text'}}"
           >
-            {{encrypt ? 'lock' : 'lock_open'}}
+            {{encrypt ? 'lock' : 'no_encryption'}}
           </mat-icon>
 
           <div class="fee-hint"
                fuseMatSidenavToggler="message-right-sidenav"
                matTooltip="{{'fee' | i18n}}"
-          >{{feeBurst}}</div>
+          >{{'fee' | i18n}}: {{feeSigna}}</div>
         </div>
       </div>
 
@@ -56,7 +56,9 @@
         </button>
 
         <mat-menu #contactMenu="matMenu">
-          <button mat-menu-item fuseMatSidenavToggler="message-right-sidenav">
+          <button mat-menu-item
+                  fuseMatSidenavToggler="message-right-sidenav"
+          >
             Options
           </button>
         </mat-menu>
