--- a/web/angular-wallet/src/app/main/messages/sidenavs/right/options/options.component.html
+++ b/web/angular-wallet/src/app/main/messages/sidenavs/right/options/options.component.html
@@ -10,20 +10,12 @@
 </div>
 
 <div class="sidenav-content py-32 px-24" fxFlex fxLayout="column" *ngIf="options">
-  <div class="mat-form-field">
-    <mat-form-field class="fullwidth">
-      <input matInput
-             [(ngModel)]="feeBurst"
-             name="feeBurst"
-             placeholder="{{ 'fee' | i18n }}">
-      <label matPrefix>{{CurrencySymbol}}&nbsp;</label>
-    </mat-form-field>
-  </div>
-
-  <div class="mat-form-field">
-    <app-fee-selector [fees]="fees" [(fee)]="feeBurst"></app-fee-selector>
-  </div>
-
+  <app-fee-input
+    [(feeSigna)]="feeSigna"
+    [type]="type"
+    [subtype]="subtype"
+  >
+  </app-fee-input>
   <div class="mat-form-field mt-16">
     <mat-checkbox [(ngModel)]="encrypt">{{ "encrypt_message" | i18n }}</mat-checkbox>
   </div>
