--- a/web/angular-wallet/src/app/main/messages/sidenavs/right/options/options.component.html
+++ b/web/angular-wallet/src/app/main/messages/sidenavs/right/options/options.component.html
@@ -13,7 +13,7 @@
   <app-fee-input
     [(feeSigna)]="feeSigna"
     [type]="type"
-    [subtype]="subtype"
+    [subtype]="subtype",
   >
   </app-fee-input>
   <div class="mat-form-field mt-16">
