--- a/web/angular-wallet/src/app/main/set-account-info/set-account-info.component.html
+++ b/web/angular-wallet/src/app/main/set-account-info/set-account-info.component.html
@@ -1,4 +1,4 @@
-<app-page title="{{ 'set_account_info' | i18n }}" *ngIf="fees">
+<app-page title="{{ 'set_account_info' | i18n }}">
   <div class="account-info pl-20 pr-20 mb-8">
     <div class="account-info__field">
       <small class="secondary-text text-uppercase">{{'account'| i18n}}</small>
@@ -19,6 +19,7 @@
 
       <mat-form-field>
         <textarea matInput
+                  cdkTextareaAutosize
                   name="description"
                   placeholder="{{ 'description' | i18n }}"
                   [(ngModel)]="description"
@@ -29,14 +30,12 @@
 
       <ng-container *ngIf="!immutable">
 
-        <app-fee-selector [fees]="fees" [(fee)]="fee"></app-fee-selector>
-
-        <div *ngIf="advanced">
-          <mat-form-field>
-            <label>{{ 'deadline_hours' | i18n }}</label>
-            <input matInput [(ngModel)]="deadline" name="deadline" placeholder="{{ 'deadline_hours' | i18n }}">
-          </mat-form-field>
-        </div>
+        <app-fee-input [type]="txType"
+                       [subtype]="txSubtype"
+                       [(feeSigna)]="fee"
+                       [payloadLength]="getPayloadLength()"
+        >
+        </app-fee-input>
 
         <app-submit-transaction [disabled]="!canSubmit()"
                                 [isSubmitting]="isSending"
@@ -44,8 +43,5 @@
       </ng-container>
     </form>
 
-    <a *ngIf="!immutable" (click)="advanced=!advanced">
-      <em>{{ advanced ? "basic" : "advanced" | i18n }}</em>
-    </a>
   </div>
 </app-page>
