--- a/web/angular-wallet/src/app/main/messages/message-view/message-view.component.html
+++ b/web/angular-wallet/src/app/main/messages/message-view/message-view.component.html
@@ -28,7 +28,7 @@
 
           <div *ngIf="isNewMessage" class="message-contact-name-input">
             <mat-form-field floatLabel="never" appearance="standard">
-              <input matInput prefix="{{addressPrefix}}-" pasteableAddress [patterns]="burstAddressPatternRef"
+              <input matInput prefix="{{addressPrefix}}-" pasteableAddress [patterns]="addressPatternRef"
                      mask="____-____-____-_____" [dropSpecialCharacters]="false" [showMaskTyped]="true"
                      [(ngModel)]="message.senderRS" name="message.senderRS" placeholder="{{ 'recipient' | i18n }}">
             </mat-form-field>
@@ -40,13 +40,13 @@
                     fuseMatSidenavToggler="message-right-sidenav"
                     matTooltip="{{encrypt ? 'Messages will be encrypted' : 'Messages will be plain text'}}"
           >
-            {{encrypt ? 'lock' : 'lock_open'}}
+            {{encrypt ? 'lock' : 'no_encryption'}}
           </mat-icon>
 
           <div class="fee-hint"
                fuseMatSidenavToggler="message-right-sidenav"
                matTooltip="{{'fee' | i18n}}"
-          >{{feeBurst}}</div>
+          >{{'fee' | i18n}}: {{feeSigna}}</div>
         </div>
       </div>
 
@@ -56,7 +56,9 @@
         </button>
 
         <mat-menu #contactMenu="matMenu">
-          <button mat-menu-item fuseMatSidenavToggler="message-right-sidenav">
+          <button mat-menu-item
+                  fuseMatSidenavToggler="message-right-sidenav"
+          >
             Options
           </button>
         </mat-menu>
@@ -118,7 +120,7 @@
             fxLayoutAlign="start center">
 
         <mat-form-field class="message-text" fxFlex floatLabel="never" appearance="standard">
-                    <textarea matInput #replyInput placeholder="Type your message" ngModel name="message" [rows]="1"
+                    <textarea matInput #replyInput placeholder="Type your message" ngModel (ngModelChange)="onMessageChange($event)" name="message" [rows]="1" maxlength="1000"
                               [matTextareaAutosize]="true" required></textarea>
         </mat-form-field>
 
