--- a/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
@@ -1,83 +1,38 @@
 <form (ngSubmit)="onSubmit($event);" #sendBurstForm="ngForm">
 
   <recipient-input [recipientValue]="recipient.addressRaw"
-                         (recipientChange)="onRecipientChange($event)"
-                         (qrCodeUpload)="onQRUpload($event)"
-                         [disabled]="immutable">
+                   (recipientChange)="onRecipientChange($event)"
+                   (qrCodeUpload)="onQRUpload($event)"
+                   [disabled]="immutable">
 
   </recipient-input>
 
-  <div class="amount-wrapper">
-    <mat-form-field>
-      <mat-label>{{ 'amount' | i18n }}</mat-label>
-      <span class="mr-8" matPrefix>{{symbol}}</span>
-      <input matInput [(ngModel)]="amount" name="amount" [disabled]="immutable">
-      <mat-icon
-        class="all-icon"
-        *ngIf="!immutable"
-        matSuffix
-        matTooltip="{{'spend_all' | i18n}}"
-        (click)="onSpendAll()"
-      >
-        all_inclusive
-      </mat-icon>
-    </mat-form-field>
-
-    <mat-form-field>
-      <mat-label>{{ 'fee' | i18n }}</mat-label>
-      <span class="mr-8" matPrefix>{{symbol}}</span>
-      <input matInput [(ngModel)]="fee" name="fee" [disabled]="immutable">
-    </mat-form-field>
-  </div>
-
-  <app-fee-selector *ngIf="!immutable" [fees]="fees" [(fee)]="fee"></app-fee-selector>
+  <app-amount-input [(amount)]="amount"
+                    (amountChange)="onAmountChange()"
+                    [disabled]="immutable"
+                    [maxAmount]="maxAmount"></app-amount-input>
+  <app-fee-input *ngIf="!immutable"
+                 [type]="type"
+                 [subtype]="subtype"
+                 [(feeSigna)]="fee"
+                 (feeSignaChange)="onAmountChange()"
+                 [payloadLength]="message ? message.length : 0"
+  >
+  </app-fee-input>
 
   <mat-checkbox labelPosition="before" [disabled]="immutable" [(ngModel)]="showMessage"
                 name="showMessage">{{ "add_message_q" | i18n }}</mat-checkbox>
-
-  <div *ngIf="showMessage">
-    <mat-form-field>
-      <textarea matInput [disabled]="immutable" [(ngModel)]="message" name="message"
-                placeholder="{{ 'message' | i18n }}"
-                cdkTextareaAutosize
-      ></textarea>
-    </mat-form-field>
-    <mat-checkbox class="font-size-14"
-                  labelPosition="before"
-                  [disabled]="immutable"
-                  [(ngModel)]="encrypt"
-                  name="encrypt">{{ "encrypt_message" | i18n }}?
-    </mat-checkbox>
-    <div *ngIf="isMessageTooLong()" class="error">{{ "message_too_long" | i18n }}</div>
-  </div>
-
-  <div *ngIf="advanced">
-    <mat-checkbox labelPosition="before" [disabled]="immutable" [(ngModel)]="messageIsText"
-                  name="messageIsText">{{ "message_is_text" | i18n }}</mat-checkbox>
-
-    <mat-form-field>
-      <label>{{ 'deadline_hours' | i18n }}</label>
-      <input matInput [(ngModel)]="deadline" name="deadline" placeholder="{{ 'deadline_hours' | i18n }}">
-    </mat-form-field>
-  </div>
-
-  <div class="submit-transaction">
-    <mat-form-field class="message-text password-field" floatLabel="never" appearance="standard">
-      <input type="password" matInput required placeholder="{{'enter_pin' | i18n}}" [(ngModel)]="pin" name="pin">
-    </mat-form-field>
-
-    <button class="send-button" mat-icon-button type="submit" aria-label="Send message"
-            [disabled]="!canSubmit()">
-      <ng-container *ngIf="!isSending">
-        <mat-icon [class.enabled]="canSubmit() || false">send</mat-icon>
-      </ng-container>
-      <ng-container *ngIf="isSending">
-        <mat-spinner diameter="20"></mat-spinner>
-      </ng-container>
-    </button>
-  </div>
-
+  <ng-container *ngIf="showMessage">
+    <app-message-input
+      [disabled]="immutable"
+      [(message)]="message"
+      [(isText)]="messageIsText"
+      [(encrypt)]="encrypt"
+    >
+    </app-message-input>
+  </ng-container>
+  <app-submit-transaction [(pin)]="pin" [disabled]="!canSubmit()" [isSubmitting]="isSending">
+  </app-submit-transaction>
   <strong>{{'total' | i18n}}:&nbsp;</strong>
-  <span [class.error-text]="!hasSufficientBalance()">{{ getTotal().getSigna() | amount }}</span> -
-  <a (click)="advanced=!advanced"><em>{{ advanced ? "basic" : "advanced" | i18n }}</em></a>
+  <span [class.error-text]="!hasSufficientBalance()">{{ getTotal().getSigna() | amount }}</span>
 </form>
