--- a/web/angular-wallet/src/app/main/blocks/blocks.component.html
+++ b/web/angular-wallet/src/app/main/blocks/blocks.component.html
@@ -1,31 +1,4 @@
-<div class="page-layout blank simple" fusePerfectScrollbar>
-
-  <!-- HEADER -->
-  <div class="header accent p-24 h-160" fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-xs="row"
-       fxLayoutAlign.gt-xs="space-between center">
-
-    <div fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-xs="column" fxLayoutAlign.gt-xs="center start">
-      <div fxLayout="row" fxLayoutAlign="start center">
-        <a [routerLink]="['/dashboard']">
-          <mat-icon class="secondary-text s-18">home</mat-icon>
-        </a>
-        <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
-        <span class="secondary-text">{{ 'blocks' | i18n }}</span>
-      </div>
-      <div class="h1 mt-16">{{ 'blocks' | i18n }}</div>
-    </div>
-
-  </div>
-  <!-- / HEADER -->
-
-  <div class="main-widget" *ngIf="chart">
-    <div class="position-relative h-256 pb-16 blue-600">
-      <canvas baseChart [datasets]="chart.datasets" [labels]="chart.labels" [colors]="chart.colors"
-              [options]="chart.options" [chartType]="chart.chartType">
-      </canvas>
-    </div>
-  </div>
-
+<app-page title="{{ 'blocks' | i18n }}" [full]="true">
 
   <div class="p-24 content">
     <mat-table #table [dataSource]="dataSource" matSort>
@@ -79,10 +52,27 @@
         </mat-cell>
       </ng-container>
 
+
+      <ng-container matColumnDef="totalFeeBurntNQT">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>
+          <mat-icon>money_off</mat-icon>&nbsp;{{ 'feeBurnt' | i18n }}
+        </mat-header-cell>
+        <mat-cell *matCellDef="let block"> {{ block.totalFeeBurntNQT | amount:'planck'}}
+        </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="averageCommitmentNQT">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>
+          <mat-icon>money</mat-icon>&nbsp;{{ 'avgCommitment' | i18n }}
+        </mat-header-cell>
+        <mat-cell *matCellDef="let block"> {{ block.averageCommitmentNQT | amount:'planck'}}
+        </mat-cell>
+      </ng-container>
+
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
     <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[10, 20, 500]" [showFirstLastButtons]="true">
     </mat-paginator>
   </div>
-</div>
+</app-page>
