feat: sticky toolbar

--- a/web/angular-wallet/src/app/layout/components/toolbar/toolbar.theme.scss
+++ b/web/angular-wallet/src/app/layout/components/toolbar/toolbar.theme.scss
@@ -3,6 +3,8 @@
     $foreground: map-get($theme, foreground);
 
     toolbar {
+      position: sticky;
+      top: 0;
         .toolbar-separator {
             background: map-get($foreground, divider);
         }
