--- a/web/angular-wallet/src/app/main/settings/settings.component.html
+++ b/web/angular-wallet/src/app/main/settings/settings.component.html
@@ -94,8 +94,7 @@
 
       <ng-container *ngIf="isDesktop">
         <mat-divider class="my-24"></mat-divider>
-
-        <div class="notification_settings">
+        <div>
           <div class="font-size-14 font-weight-600 mb-8 secondary-text">{{"settings_notification" | i18n}}</div>
           <mat-slide-toggle
             [(ngModel)]="showDesktopNotifications"
